wxc/include/ewxw/wxc_glue.h



/* wxRegionIterator */
TClassDefExtend(wxRegionIterator,wxObject)
TClass(wxRegionIterator) wxRegionIterator_Create(  );

TClass(wxRegionIterator) wxRegionIterator_CreateFromRegion( TClass(wxRegion) region );

void       wxRegionIterator_Delete( TSelf(wxRegionIterator) _obj );

int        wxRegionIterator_GetHeight( TSelf(wxRegionIterator) _obj );

int        wxRegionIterator_GetWidth( TSelf(wxRegionIterator) _obj );

int        wxRegionIterator_GetX( TSelf(wxRegionIterator) _obj );

int        wxRegionIterator_GetY( TSelf(wxRegionIterator) _obj );

int        wxRegionIterator_HaveRects( TSelf(wxRegionIterator) _obj );

void       wxRegionIterator_Next( TSelf(wxRegionIterator) _obj );

void       wxRegionIterator_Reset( TSelf(wxRegionIterator) _obj );

void       wxRegionIterator_ResetToRegion( TSelf(wxRegionIterator) _obj, TClass(wxRegion) region );